# archegos

./: README.txt  archegos.cabal  hdm.cabal
config/: archegos.example.config
src/: ConfigReader.hs  Main.hs
