name:                archegos
version:             0.1.0.0
synopsis:            A command line Desktop Manager inspired by CDM
                     Archegos means beginning, originating
homepage:            TBD
license:             PublicDomain
license-file:        LICENSE
author:              Nick O
maintainer:          public@orton.cc
category:            System
build-type:          Simple
cabal-version:       >=1.10


executable hdm
  main-is:             Main.hs
  build-depends:       base >=4.8 && <4.9
                       , hscurses
                       , process
  hs-source-dirs:      src
  default-language:    Haskell2010
  
